car lab/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;\\sd203.org\dfs-root$\HS\NNHS\Students\RIBrumfield\GitHub\chapter 3 practice
-d
\\sd203.org\dfs-root$\HS\NNHS\Students\RIBrumfield\GitHub\chapter 3 practice\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\sd203.org\dfs-root$\HS\NNHS\Students\RIBrumfield\GitHub\chapter 3 practice\Car.java
<---- end of javadoc command ---->
Loading source file \\sd203.org\dfs-root$\HS\NNHS\Students\RIBrumfield\GitHub\chapter 3 practice\Car.java...
\\sd203.org\dfs-root$\HS\NNHS\Students\RIBrumfield\GitHub\chapter 3 practice\Car.java:16: error: <identifier> expected
    privet double fuelInTank;
          ^
\\sd203.org\dfs-root$\HS\NNHS\Students\RIBrumfield\GitHub\chapter 3 practice\Car.java:16: error: <identifier> expected
    privet double fuelInTank;
                            ^
\\sd203.org\dfs-root$\HS\NNHS\Students\RIBrumfield\GitHub\chapter 3 practice\Car.java:38: error: not a statement
       g
       ^
\\sd203.org\dfs-root$\HS\NNHS\Students\RIBrumfield\GitHub\chapter 3 practice\Car.java:38: error: ';' expected
       g
        ^
4 errors
